# automotive

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: linux-windows.yml  linux.yml  macos.yml  rust.yml  windows.yml
examples/: can_printer.rs  can_printer_async.rs  configure_bitrate.rs  isotp.rs  query_fw_versions.rs  query_fw_versions_j2534.rs  uds.rs  vector.rs
scripts/: build_can_isotp.sh  release_peak_usb.sh  set_up_vcan.sh  vecu.py  vecu_isotp.py  vecu_uds.py
src/: adapter.rs  async_can.rs  can.rs  error.rs  isotp.rs  lib.rs
src/can/: adapter.rs  adapter_config.rs  async_can.rs  bitrate.rs  mod.rs  timing.rs
src/isotp/: constants.rs  error.rs  mod.rs  types.rs
src/j2534/: can_adapter.rs  common.rs  constants.rs  dll.rs  error.rs  isotp_adapter.rs  mod.rs
src/panda/: constants.rs  endpoint.rs  error.rs  hw_type.rs  mod.rs  safety_model.rs  unpack.rs  usb_protocol.rs
src/pcan/: error.rs  mod.rs  sys.rs
src/peak/: constants.rs  error.rs  mod.rs  protocol.rs
src/socketcan/: frame.rs  mod.rs  socket.rs
src/uds/: constants.rs  error.rs  mod.rs  types.rs
src/usb/: mod.rs  rusb_backend.rs  webusb.rs
src/vector/: bindings.rs  bit_timing.rs  error.rs  mod.rs  types.rs  vxlapi.rs  wrapper.rs
tests/: adapter_tests.rs  isotp_tests.rs  uds_tests.rs
web-demo/: Cargo.toml  README.md  index.html
web-demo/.cargo/: config.toml
web-demo/src/: main.rs
windows/: vxlapi.h  wrapper.h
