[package]
name = "automotive"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["automotive", "CAN", "UDS"]
description = "Rust crate providing a variety of automotive related libraries, such as communicating with CAN interfaces and diagnostic APIs."
repository = "https://github.com/I-CAN-hack/automotive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-adapters"]
all = ["all-adapters"]
default-adapters = ["panda", "socketcan"]
all-adapters = ["default-adapters", "vector-xl"]

# adapters
vector-xl = ["dep:bindgen"]
panda = []
socketcan = []

# adapter tests
test-panda = ["panda"]
test-socketcan = ["socketcan"]
test-vector = ["vector-xl"]
test-vcan = ["socketcan"]

[dependencies]
async-stream = "0.3.5"
bstr = "1.9.0"
embedded-can = "0.4"
hex = "0.4"
rusb = "0.9"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = "0.6.0"
libc = "0.2.154"

[dev-dependencies]
futures = "0.3.30"
tracing-subscriber = "0.3"
serial_test = "3.0.0"

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
