[package]
name = "automotive"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["automotive", "CAN", "UDS"]
description = "Rust crate providing a variety of automotive related libraries, such as communicating with CAN interfaces and diagnostic APIs."
repository = "https://github.com/I-CAN-hack/automotive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-adapters"]
all = ["all-adapters", "serde"]
default-adapters = ["panda", "socketcan"]
all-adapters = ["default-adapters", "vector-xl", "j2534"]
serde = ["dep:serde"]

# adapters
vector-xl = ["dep:bindgen", "dep:libloading"]
j2534 = ["dep:libloading", "dep:winreg"]
panda = []
socketcan = []

# adapter tests
test-j2534 = ["j2534"]
test-panda = ["panda"]
test-socketcan = ["socketcan"]
test-vcan = ["socketcan"]
test-vector = ["vector-xl"]

[dependencies]
async-stream = "0.3.5"
bstr = "1.9.0"
hex = "0.4"
rusb = "0.9"
serde = { version = "1.0.197", features = ["derive"], optional = true }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = "0.6.0"
libc = "0.2.154"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = { version = "0.8", optional = true }
winreg = { version = "0.55", optional = true }

[dev-dependencies]
futures = "0.3.30"
tracing-subscriber = "0.3"
serial_test = "3.0.0"

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
