[package]
name = "automotive"
version = "0.4.1"
edition = "2021"
license = "MIT"
keywords = ["automotive", "CAN", "UDS"]
description = "Rust crate providing a variety of automotive related libraries, such as communicating with CAN interfaces and diagnostic APIs."
repository = "https://github.com/I-CAN-hack/automotive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
all = ["all-adapters", "serde"]
default-adapters = ["panda", "socketcan"]
all-adapters = ["default-adapters", "vector-xl", "j2534", "peak"]
serde = ["dep:serde"]

# USB backends (transports). These are orthogonal to the adapters below: an adapter that
# speaks USB picks `RusbBackend` on native and `WebUsbBackend` on wasm via the target.
rusb-backend = ["dep:rusb"]
webusb = ["dep:web-sys", "dep:js-sys", "dep:console_error_panic_hook"]

# adapters
vector-xl = ["dep:bindgen", "dep:libloading"]
j2534 = ["dep:libloading", "dep:winreg"]
# `panda`/`peak` default to the rusb backend so `--features panda` is a working native
# build. For the browser, add the WebUSB transport: `--features panda,webusb`.
panda = ["rusb-backend"]
peak = ["rusb-backend"]
socketcan = ["dep:libc", "dep:socket2"]

# adapter tests
test-j2534 = ["j2534"]
test-panda = ["panda"]
test-peak = ["peak"]
test-socketcan = ["socketcan"]
test-vcan = ["socketcan"]
test-vector = ["vector-xl"]

[dependencies]
async-stream = "0.3.5"
bstr = "1.9.0"
hex = "0.4"
serde = { version = "1.0.197", features = ["derive"], optional = true }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.58"
# Base (wasm-compatible) tokio. Native re-declares tokio with the "full" feature below.
tokio = { version = "1.36.0", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.14", default-features = false }
tracing = "0.1"

# WebUSB backend dependencies (only built with the `webusb` feature, on wasm targets).
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceRequestOptions",
    "UsbControlTransferParameters",
    "UsbRequestType",
    "UsbRecipient",
    "UsbInTransferResult",
    "UsbOutTransferResult",
] }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Native-only: rusb (libusb won't cross-compile to wasm, so it lives here and the
# `rusb-backend`/`panda` features only pull it on native), a minimal block_on (used by
# AsyncCanAdapter's processing thread), and the full tokio runtime/stream features.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusb = { version = "0.9", optional = true }
pollster = "0.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

# Browser-only: wasm-bindgen glue used to drive the adapter via spawn_local.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.6.0", optional = true }
libc = { version = "0.2.154", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = { version = "0.8", optional = true }
winreg = { version = "0.55", optional = true }

[dev-dependencies]
futures = "0.3.30"
tracing-subscriber = "0.3"
serial_test = "3.0.0"

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
