[package]
name = "webusb-demo"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate (not part of the parent `automotive` package/workspace).
[workspace]

[dependencies]
automotive = { path = "..", features = ["panda", "peak", "webusb"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
hex = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "EventTarget",
    "console",
] }
